# fastapi-sqlmodel-project

./: README.md  main.py  pyproject.toml
db/: __init__.py  crud.py  session.py
models/: __init__.py  base.py  item.py  user.py
relationships/: __init__.py  item.py  user.py
