[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Michael <michael@mycircle.ng>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
